classDiagram
    direction LR
    IParseTreeListener <|-- IPropertyFile_7_2Listener
    IPropertyFile_7_2Listener <|-- PropertyFile_7_2BaseListener
    PropertyFile_7_2BaseListener <|-- PropertyFileLoader
    note for IParseTreeListener "ANTLR library"
    class IParseTreeListener {
        <<interface>>
        +VisitTerminal()
        +EnterEveryRule()
        +ExitEveryRule()
        +VisitErrorNode()
    }
    note for IPropertyFile_7_2Listener "ANTLR generates from PropertyFile_7_2.g4"
    class IPropertyFile_7_2Listener {
        <<interface>>
        +EnterFile()
        +ExitFile()
        +EnterProp()
        +ExitProp()
    }
    note for PropertyFile_7_2BaseListener "ANTLR generates from PropertyFile_7_2.g4"
    class PropertyFile_7_2BaseListener{
        +VisitTerminal()
        +EnterEveryRule()
        +ExitEveryRule()
        +VisitErrorNode()
        +EnterFile()
        +ExitFile()
        +EnterProp()
        +ExitProp()
    }
    note for PropertyFileLoader "Application code"
    class PropertyFileLoader{
        +ExitProp()
    }